# fnirsi_protocol

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  re_methodology.md
docs/adr/: ADR-001-use-arc42.md  ADR-002-human-authored-docs.md  ADR-003-vibe-coding-claude-code.md  ADR-004-git-version-control.md  ADR-005-github-hosting.md  ADR-006-github-actions-ci.md  ADR-007-conventional-commits.md  ADR-008-semantic-release.md  index.md
docs/arc42/: 01_introduction_and_goals.md  02_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_crosscutting_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_risks_and_technical_debt.md  12_glossary.md  index.md
docs/dev/: api.md  contributing.md  setup.md
docs/protocol/: README.md  captures.md  commands.md  framing.md  reference.md  session.md  spec.md
docs/protocol/captures/: dps150_connect_set_10v_set_1A_disconnect.txt  ps_connect_raw.pcapng
docs/protocol/kaitai/: fnirsi_dps150.ksy
legacy/: README.md  mkdocs.yml  test_device.py
legacy/.github/: copilot-instructions.md
legacy/docs/: index.md  re_methodology.md
legacy/docs/protocol/captures/: .gitkeep
legacy/src/fnirsi_ps_control/: __init__.py  connection.py  exceptions.py  protocol.py
protocol/: fnirsi_dps150.ksy  sequences.yaml
protocol/captures/: dps150_connect_enable_out_set_v_set_i_disable_disconnect.txt
scripts/: gen_kaitai.sh  gen_protocol_diagram.py  ksy_to_md.py
src/fnirsi_ps_control/: __init__.py  cli.py  connection.py  device.py  exceptions.py  protocol.py
tests/: conftest.py  test_protocol.py  test_sequences_complete.py
